# CSS-Object-Recognition

./: .gitignore  CMakeLists.txt  GITHUB_PAGES_SETUP.md  README.md  create_gif.py  quickstart.sh  run.sh  run_interactive.sh
cmd/: css_interactive.cpp  css_recognition.cpp
docs/: README.md  _config.yml  css-demo.js  index.html
include/: CSS.h  Recognition.h
include/toed/: cpu_toed.hpp  definitions.h  indices.hpp
src/: CSS.cpp  Recognition.cpp  css_recognition.cpp
src/toed/: cpu_toed.cpp
